# cplus_design_patterns

./: .clang-format  .gitignore  CMakeLists.txt  README.md
behavioral/: CMakeLists.txt
behavioral/command/: App.cpp  App.h  CMakeLists.txt  Command.cpp  Command.h  CommandTest.cpp  CopyCommand.cpp  CopyCommand.h  Editor.cpp  Editor.h  PasteCommand.cpp  PasteCommand.h
behavioral/mediator/: CMakeLists.txt  Mediator.h  MediatorTest.cpp  MediatorTest.h  Plane.cpp  Plane.h  TrafficController.cpp  TrafficController.h
behavioral/template/: Template.cpp
behavioral/template_method/: CMakeLists.txt  ConsoleDestination.cpp  ConsoleDestination.h  ConsoleLogger.cpp  ConsoleLogger.h  Destination.h  FileDestination.cpp  FileDestination.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  TemplateTest.cpp
command/: Command.cpp
mediator/: Mediator.cpp
